--- a/what-todo/package.json
+++ b/what-todo/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
-  },
+    "preview": "vite preview --port 8080 --host 0.0.0.0",
+    "serve": "vite preview --port 8080 --host 0.0.0.0"  },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.18",
