--- a/what-todo/package.json
+++ b/what-todo/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview --port 8080 --host 0.0.0.0",
-    "serve": "vite preview --port 8080 --host 0.0.0.0"  },
+    "serve": "vite preview --port 8080 --host 0.0.0.0",
+    "deploy": "vite build && git subtree push --prefix dist origin gh-pages"
+  },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.18",
