--- a/what-todo/package.json
+++ b/what-todo/package.json
@@ -8,7 +8,7 @@
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview --port 8080 --host 0.0.0.0",
     "serve": "vite preview --port 8080 --host 0.0.0.0",
-    "deploy": "vite build && git subtree push --prefix dist origin gh-pages"
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
@@ -22,6 +22,7 @@
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.2",
     "@vue/tsconfig": "^0.8.1",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.9.3",
     "vite": "^7.3.1",
     "vue-tsc": "^3.1.5"
